--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <p class="pInfo">Quanto mais for o prêmio, maior a dificuldade para você obter o prêmio.</p>
             <p class="pInfo">As rifas são finalizadas assim que todos os numeros forem comprados</p>
             <p class="pInfo">Ganhador da rifa será notificado via WhatsApp</p>
+            <button class="botao" onclick="Grupo()">Entrar no grupo do WhatsApp</button>
         </div>
 
         <div class="abaRifas">
