--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             <button class="botao" onclick="ComprarRifa()">COMPRAR</button>
         </div>
     </main>
+
+    <div class="versao">
+        <p>versão 1.01</p>
+    </div>
      <script src="script.js"></script>
 </body>
 </html>
