--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     </main>
 
     <div class="versao">
-        <p>versão 1.01</p>
+        <p>versao 1.02</p>
     </div>
-    
+
      <script src="script.js"></script>
 </body>
 </html>
