--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2 class="h2rifa">RIFA 1: Fácil</h2>
                 <div class="pRifa">
                     <p>Inicio 15 numeros</p>
-                    <p>Apenas 15 numeros disponiveis</p>
+                    <p>Apenas 14 numeros disponiveis</p>
                         <div class="cores">
                             <p class="D">Verdes: Disponiveis</p>
                             <p class="V">Vermelhos: Vendidos</p>
@@ -47,7 +47,7 @@
                 <span class="D">4</span>
                 <span class="D">5</span>
                 <span class="D">6</span>
-                <span class="D">7</span>
+                <span class="V">7</span>
                 <span class="D">8</span>
                 <span class="D">9</span>
                 <span class="D">10</span>
