--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                 <div class="ValPremios">
                     <h3>Valor: R$ 5</h3>
                     <h3>Premiação: R$ 50</h3>
-                </div>
+        </div>
 
-            <div class="NumDisp">
+    <div class="NumDisp">
                 <span class="D">1</span>
                 <span class="D">2</span>
                 <span class="D">3</span>
                 <span class="D">4</span>
                 <span class="D">5</span>
                 <span class="D">6</span>
-                <span class="V">7</span>
+                <span class="V">7</span> <!--Comprado-->
                 <span class="D">8</span>
                 <span class="D">9</span>
                 <span class="D">10</span>
@@ -56,7 +56,7 @@
                 <span class="D">13</span>
                 <span class="D">14</span>
                 <span class="D">15</span>
-            </div>
+    </div>
             <button class="botao" onclick="ComprarRifa()">COMPRAR</button>
         </div>
     </main>
