--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <span class="D">6</span>
                 <span class="V">7</span> <!--Comprado-->
                 <span class="D">8</span>
-                <span class="D">9</span>
+                <span class="V">9</span> <!--Comprado-->
                 <span class="D">10</span>
                 <span class="D">11</span>
                 <span class="D">12</span>
