--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                 <span class="D">14</span>
                 <span class="D">15</span>
     </div>
-            <button class="botao" onclick="ComprarRifa()">COMPRAR</button>
+            <button class="botao" onclick="ComprarRifa()">Comprar</button>
         </div>
     </main>
 
     <div class="versao">
-        <p>versao 1.02</p>
+        <p>versao 1.03</p>
     </div>
 
 </body>
